# SlicerUpperAirwaySegmentator

./: CMakeLists.txt  README.md
UpperAirwaySegmentator/: CMakeLists.txt  UpperAirwaySegmentator.py
UpperAirwaySegmentator/Testing/: IntegrationTestCase.py  SegmentationWidgetTestCase.py  Utils.py  __init__.py
UpperAirwaySegmentator/UpperAirwaySegmentatorLib/: PythonDependencyChecker.py  SegmentationWidget.py
